fixed issue with footer having a gap at the bottom on mobile

--- a/src/app/_elements/footer/footer.component.scss
+++ b/src/app/_elements/footer/footer.component.scss
@@ -26,7 +26,6 @@
 
 #footer {
     min-height: 340px;
-    max-height: 100%;
     background-color: #1A2535;
     font-family: GellixMedium, sans-serif;
 
